--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.3",
+    "lg-thumbnail": "^1.2.1",
+    "lg-zoom": "^1.3.0",
+    "lightgallery": "^2.7.2",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-masonry-css": "^1.0.16",
+    "react-slick": "^0.30.2",
+    "sass": "^1.78.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "eslint-config-next": "14.2.7",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10"
   }
 }
