--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-masonry-css": "^1.0.16",
     "react-slick": "^0.30.2",
     "sass": "^1.78.0",
